# agent-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md  compound-engineering.local.md  release-please-config.json  rust-toolchain.toml  rust_out  skills-lock.json
crates/core/: Cargo.toml
crates/core/src/: action.rs  action_request.rs  action_result.rs  action_step.rs  action_step_outcome.rs  action_tests.rs  actionability.rs  actionability_live_tests.rs  actionability_tests.rs  adapter.rs  capability.rs  context.rs  context_scope_tests.rs  context_tests.rs  diff.rs  element_state.rs  error.rs  hints.rs  interaction_policy.rs  interaction_policy_tests.rs  lib.rs  node.rs  node_tests.rs  notification.rs  output.rs  ref_action.rs  ref_action_tests.rs  ref_alloc.rs  ref_alloc_tests.rs  ref_identity.rs  ref_identity_tests.rs  refs.rs  refs_lock.rs  refs_serde_tests.rs  refs_store.rs  refs_store_prune.rs  refs_store_tests.rs  refs_store_trace_tests.rs  refs_tests.rs  roles.rs  (+14 more)
crates/core/src/actionability/: check.rs  mod.rs  report.rs  status.rs
crates/core/src/commands/: batch.rs  check.rs  clear.rs  click.rs  clipboard.rs  clipboard_clear.rs  clipboard_get.rs  clipboard_set.rs  close_app.rs  close_app_tests.rs  collapse.rs  combo.rs  combo_tests.rs  diff_snapshot.rs  dismiss_all_notifications.rs  dismiss_notification.rs  double_click.rs  drag.rs  drag_tests.rs  execute_by_ref.rs  expand.rs  find.rs  find_tests.rs  focus.rs  focus_window.rs  get.rs  helpers.rs  helpers_ref_action_tests.rs  helpers_test_support.rs  helpers_tests.rs  hover.rs  hover_tests.rs  is_check.rs  is_check_tests.rs  key_down.rs  key_up.rs  launch.rs  list_apps.rs  list_notifications.rs  list_surfaces.rs  (+54 more)
crates/core/src/session/: gc.rs  manifest.rs  mod.rs  session_gc_tests.rs  session_tests.rs
crates/core/src/trace_read/: html.rs  html_export_stats_tests.rs  html_screenshot_tests.rs  html_tests.rs  merge.rs  merge_tests.rs  mod.rs  mod_tests.rs  segment.rs  segment_tests.rs  viewer.css  viewer.html  viewer.js
crates/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/ffi/codegen_templates/: execute_by_ref.rs.in  snapshot.rs.in  status.rs.in  trace_export.rs.in  trace_show.rs.in  version.rs.in  wait.rs.in
crates/ffi/examples/: panic_spike.rs
crates/ffi/include/: agent_desktop.h
crates/ffi/src/: abi_version.rs  actions.rs  adapter.rs  apps.rs  convert.rs  enum_validation.rs  error.rs  error_tests.rs  ffi_try.rs  input.rs  lib.rs  log_callback.rs  main_thread.rs  pointer_guard.rs  screenshot.rs  surfaces.rs  tree.rs  types.rs  windows.rs
crates/ffi/src/actions/: conversion.rs  execute.rs  mod.rs  native_handle.rs  resolve.rs  resolve_tests.rs  result.rs
crates/ffi/src/apps/: close.rs  launch.rs  list.rs  mod.rs
crates/ffi/src/commands/: envelope_out.rs  execute_by_ref.rs  generated.rs  mod.rs  snapshot.rs  status.rs  version.rs  wait.rs
crates/ffi/src/convert/: app.rs  mod.rs  notification.rs  rect.rs  string.rs  surface.rs  window.rs
crates/ffi/src/input/: clipboard.rs  drag.rs  mod.rs  mouse.rs
crates/ffi/src/notifications/: action.rs  dismiss.rs  dismiss_all.rs  filter.rs  list.rs  mod.rs
crates/ffi/src/observation/: find.rs  get.rs  is.rs  mod.rs  walk.rs
crates/ffi/src/screenshot/: accessors.rs  capture.rs  free.rs  mod.rs
crates/ffi/src/surfaces/: list.rs
crates/ffi/src/tree/: flatten.rs  free.rs  get.rs  mod.rs
crates/ffi/src/types/: action.rs  action_kind.rs  action_result.rs  action_step.rs  app_info.rs  app_list.rs  direction.rs  drag_params.rs  element_state.rs  find_query.rs  image_buffer.rs  image_format.rs  key_combo.rs  mod.rs  modifier.rs  mouse_button.rs  mouse_event.rs  mouse_event_kind.rs  native_handle.rs  node.rs  node_tree.rs  notification_filter.rs  notification_info.rs  notification_list.rs  point.rs  policy_kind.rs  rect.rs  ref_entry.rs  screenshot_kind.rs  screenshot_target.rs  scroll_params.rs  snapshot_surface.rs  surface_info.rs  surface_list.rs  tree_options.rs  wait_args.rs  window_info.rs  window_list.rs  window_op.rs  window_op_kind.rs
crates/ffi/src/windows/: focus.rs  free_one.rs  list.rs  mod.rs  op.rs  to_core.rs
crates/ffi/tests/: c_abi_actions.rs  c_abi_execute_by_ref.rs  c_abi_harness.rs  c_abi_init.rs  c_abi_inputs.rs  c_abi_json_commands.rs  c_abi_layout.rs  c_abi_lifecycle.rs  c_abi_log_callback.rs  c_abi_passthrough.rs  c_abi_roundtrip.rs  c_abi_session.rs  c_abi_session_trace.rs  c_abi_snapshot.rs  c_abi_wait.rs  c_header_compile.rs  c_header_double_include.rs  codegen_exhaustiveness.rs  error_lifetime.rs
crates/ffi/tests/common/: mod.rs
crates/macos/: Cargo.toml  build.rs
crates/macos/examples/: ax_probe.rs  axprobe.rs  axprobe2.rs
crates/macos/src/: action_extras.rs  actions.rs  adapter.rs  app_ops.rs  cf_type.rs  clipboard.rs  input.rs  key_dispatch.rs  lib.rs  mouse.rs  permissions.rs  roles.rs  screenshot.rs  surfaces.rs  tree.rs  wait.rs  window_ops.rs
crates/macos/src/actions/: activate.rs  ax_helpers.rs  chain.rs  chain_context.rs  chain_defs.rs  chain_disclosure_steps.rs  chain_menu_steps.rs  chain_step.rs  chain_steps.rs  chain_verify.rs  chain_web_steps.rs  discovery.rs  dispatch.rs  extras.rs  mod.rs  post_state.rs  scroll.rs  toggle_state.rs  type_text.rs
crates/macos/src/input/: blocked_combo.rs  blocked_combo_tests.rs  clipboard.rs  keyboard.rs  mod.rs  (+2 more)
src/: Cargo.toml  batch.rs  batch_dispatch.rs  batch_dispatch_ext.rs  batch_tests.rs  cli.rs  cli_args.rs  cli_args_notifications.rs  cli_args_skills.rs  cli_args_system.rs  command_contract_tests.rs  dispatch.rs  dispatch_notifications.rs  help_after.txt  help_before.txt  main.rs
src/batch/: mod.rs  tests.rs
src/cli/: contract_tests.rs  help_after.txt  help_before.txt  mod.rs  wait_for_cli_tests.rs
src/cli_args/: actions.rs  mod.rs  notifications.rs  session.rs  skills.rs  system.rs  trace.rs
src/command_policy/: mod.rs  tests.rs
src/dispatch/: mod.rs  notifications.rs  parse.rs  parse_tests.rs  session.rs  trace.rs
src/tests/: conformance.rs  snapshot_test.rs
(+172 files in other folders)
