[package]
name    = "agent-desktop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
rustc-hash.workspace = true
base64.workspace     = true
libc.workspace       = true
smallvec.workspace   = true

[lints]
workspace = true
